fix(nav): oms logo blurry

--- a/site/SiteLogos.scss
+++ b/site/SiteLogos.scss
@@ -20,7 +20,7 @@
         @include xlg-up {
             display: flex;
         }
-        column-gap: 5px;
+        column-gap: 6px;
         align-items: flex-start;
         margin-top: 5px;
 
